fix alignment bug

--- a/isss_prospectus.scss
+++ b/isss_prospectus.scss
@@ -19,9 +19,9 @@ body {
 .main-text{
 	img{
 		float: right;
-		margin: 10px 0px 45px 0px;
-		max-height: 250px;
-		max-width: 250px;
+		margin: 0px 0px 0px 0px;
+		max-height: 225px;
+		max-width: 225px;
 	}
 	margin-right: 1cm;
 	p{
